# autokern

./: README.md  main.py  pyproject.toml
src/autokern/: cli.py  good_latin_pairs_450.json  model.py  renderer.py
src/autokern/weights/: expert_fold0_450_croped_GELU.pth  expert_fold1_450_croped_GELU.pth  expert_fold2_450_croped_GELU.pth  expert_fold3_450_croped_GELU.pth  expert_fold4_450_croped_GELU.pth
